more gp2 catalog wrapper styles fixing scrollbar issues

--- a/wcoa/static/wcoa/css/header.css
+++ b/wcoa/static/wcoa/css/header.css
@@ -131,6 +131,13 @@ nav .dropdown:not(.search-dropdown) .dropdown-menu > li > a {
   padding: 0;
 }
 
+@media (max-width:979px) {
+  .navbar .brand,
+  .navbar-collapse {
+    padding: 0 0 0 25px;
+  }
+}
+
 .navbar-header a {
   display: block;
   position: relative;
