--- a/wcoa/static/wcoa/css/iframe_full.css
+++ b/wcoa/static/wcoa/css/iframe_full.css
@@ -1,23 +1,26 @@
 body {
   overflow: hidden;
   width: 100vw;
+  padding: 0;
 }
+
 .iframe-wrapper {
   min-width: 100vw;
-  overflow-x:hidden;
+  overflow-x:auto;
   overflow-y: auto;
   position: relative;
   border: none;
-  height: calc(100vh - 67px);
+  height: calc(100vh - 167px);
 }
 
 iframe#page_iframe {
   position: absolute;
   min-width: 100%;
   height: 100%;
-  min-height: 100%;
-  clip: rect(100px, auto, auto, auto);
+  min-height: calc(100% + 100px);
   top: -100px;
+  border: none;
+  clip-path: inset(100px 20px 0 0);
 }
 
 div.footer.container {
